Fixed error with elements' overlap

--- a/style.css
+++ b/style.css
@@ -290,12 +290,11 @@ a {
   margin-top: 103px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 52px;
+  font-size: 25px;
   text-align: center;
   align-items: center;
   color: #fff;
+  padding-right: 20px;
 }
 
 .contact-text p {
